tests/NormalTests/paczka1/small_fuzzy/90034418.err
Error in line 1: 6uj6QP7lCR A495 6,4
Error in line 8: 7GWYinzP7 A495 26,5
Error in line 13: WfTjAwJlPu8 Al12 25l,9
Error in line 16: WfTjAwJlPu8 S410 94,06
